force-app/main/default/objects/Ana_Kasa__c/Ana_Kasa__c.object-meta.xml
<CustomObject>
    <label>Ana Kasa</label>
    <nameField>
        <label>Ana Kasa Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ana Kasa</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>