force-app/main/default/objects/Ana_Kasa__c/fields/ali_toplam_harcama__c.field-meta.xml
<CustomField>
    <fullName>ali_toplam_harcama__c</fullName>
    <label>ali toplam harcama</label>
    <summarizedField>KASA__c.Ali_Bey_Harcama__c</summarizedField>
    <summaryForeignKey>KASA__c.Ana_Kasa__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>