force-app/main/default/objects/Ana_Kasa__c/fields/Alinin_ald_klar_toplam__c.field-meta.xml
<CustomField>
    <fullName>Alinin_ald_klar_toplam__c</fullName>
    <label>Alinin aldıkları toplamı</label>
    <summarizedField>KASA__c.Ali_Bey_Verilen_Para__c</summarizedField>
    <summaryForeignKey>KASA__c.Ana_Kasa__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>