force-app/main/default/objects/Ana_Kasa__c/fields/Emine_nin_Ald_klar_Toplam__c.field-meta.xml
<CustomField>
    <fullName>Emine_nin_Ald_klar_Toplam__c</fullName>
    <label>Emine&apos;nin Aldıkları Toplamı</label>
    <summarizedField>KASA__c.Emine_Han_m_a_Verilen_Para__c</summarizedField>
    <summaryForeignKey>KASA__c.Ana_Kasa__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>