force-app/main/default/objects/Ana_Kasa__c/fields/Emine_Toplam_Harcama__c.field-meta.xml
<CustomField>
    <fullName>Emine_Toplam_Harcama__c</fullName>
    <label>Emine Toplam Harcama</label>
    <summarizedField>KASA__c.Emine_Harcama__c</summarizedField>
    <summaryForeignKey>KASA__c.Ana_Kasa__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>