force-app/main/default/objects/Ana_Kasa__c/fields/Kasaya_Toplam_Gelen__c.field-meta.xml
<CustomField>
    <fullName>Kasaya_Toplam_Gelen__c</fullName>
    <label>Kasaya Toplam Gelen</label>
    <summarizedField>KASA__c.Kasaya_Gelen_Para__c</summarizedField>
    <summaryForeignKey>KASA__c.Ana_Kasa__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>