force-app/main/default/objects/Ana_Kasa__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ali_toplam_harcama__c</columns>
    <columns>Alinin_ald_klar_toplam__c</columns>
    <columns>Emine_Toplam_Harcama__c</columns>
    <columns>Emine_nin_Ald_klar_Toplam__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>